# student-csv-registry-lab

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
data/sample/: sample.csv
notebooks/: 01_exploracao.ipynb
scripts/: download_data.py
src/: main.py
